--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,4 @@
-
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/fragment_forecast_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_forecast_recyclerview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
